# playfab-docs

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.claude/skills/: playfab-expert
.github/workflows/: ci.yml
docs/adr/: 0001-toc-driven-discovery.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/video/: playfab-context-builder-storyboard.yml
skills/playfab-expert/: SKILL.md
src/playfab_docs/: __init__.py  content.py  doctor.py  extract.py  index.py  manifests.py  models.py  pipeline.py  snapshot.py  source_metadata.py  urls.py
tests/: test_content.py  test_doctor.py  test_index.py  test_live_crawl.py  test_manifests.py  test_pipeline.py  test_snapshot.py  test_source_metadata.py  test_urls.py
